--- a/6. Data Preprocessing/Data Preprocessing.ipynb
+++ b/6. Data Preprocessing/Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b67d5c3a",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "139c3c41",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bca9e58c",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "[403 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8389f019",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "(403, 7)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "1286a1c1",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "6b177356",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "391458ae",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "23d05d89",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,9 +389,306 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a90e53c4",
+   "metadata": {},
+   "source": [
+    "# Handling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73f1dbb0",
+   "metadata": {},
+   "source": [
+    "### Filling with mean or median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "57048594",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User ID            1.569141e+07\n",
+       "Age                3.769231e+01\n",
+       "EstimatedSalary    8.236658e+04\n",
+       "Purchased          3.598015e-01\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.mean(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "01721a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82366.58354114713"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"EstimatedSalary\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ce5a608c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User ID            False\n",
+       "Date               False\n",
+       "Country            False\n",
+       "Gender             False\n",
+       "Age                False\n",
+       "EstimatedSalary    False\n",
+       "Purchased          False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.fillna(data[\"EstimatedSalary\"].mean()).isnull().any() # To get the data get updated use inplace=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6d7f9c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70000.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"EstimatedSalary\"].median()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ded57b0",
+   "metadata": {},
+   "source": [
+    "Here we can see that mean is 82K+ and median is 70K  Big difference between mean and median which means, our mean value is got affected by outliers . Mean is greater than median which means on the right side we have outliers. In this we can go for median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "43e9136f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15624510</td>\n",
+       "      <td>01-03-2012</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15810944</td>\n",
+       "      <td>01-04-2012</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>35</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15668575</td>\n",
+       "      <td>01-05-2012</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>43000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15603246</td>\n",
+       "      <td>01-06-2012</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>27</td>\n",
+       "      <td>57000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15804002</td>\n",
+       "      <td>01-09-2012</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>19</td>\n",
+       "      <td>76000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>15691863</td>\n",
+       "      <td>08-05-2013</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>46</td>\n",
+       "      <td>41000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>15706071</td>\n",
+       "      <td>08-06-2013</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>51</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>15654296</td>\n",
+       "      <td>08-07-2013</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>50</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>15755018</td>\n",
+       "      <td>08-08-2013</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>36</td>\n",
+       "      <td>33000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>15594041</td>\n",
+       "      <td>08-09-2013</td>\n",
+       "      <td>Germany&amp;</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>49</td>\n",
+       "      <td>36000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>403 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      User ID        Date   Country  Gender  Age  EstimatedSalary  Purchased\n",
+       "0    15624510  01-03-2012    France    Male   19          19000.0          0\n",
+       "1    15810944  01-04-2012     Italy    Male   35          20000.0          0\n",
+       "2    15668575  01-05-2012    France  Female   26          43000.0          0\n",
+       "3    15603246  01-06-2012   Germany  Female   27          57000.0          0\n",
+       "4    15804002  01-09-2012    France    Male   19          76000.0          0\n",
+       "..        ...         ...       ...     ...  ...              ...        ...\n",
+       "398  15691863  08-05-2013    France  Female   46          41000.0          1\n",
+       "399  15706071  08-06-2013     Italy    Male   51          23000.0          1\n",
+       "400  15654296  08-07-2013     Italy  Female   50          20000.0          1\n",
+       "401  15755018  08-08-2013   Germany    Male   36          33000.0          0\n",
+       "402  15594041  08-09-2013  Germany&  Female   49          36000.0          1\n",
+       "\n",
+       "[403 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.fillna(data[\"EstimatedSalary\"].median())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c54b2727",
+   "id": "4ed83052",
    "metadata": {},
    "outputs": [],
    "source": []
