--- a/5. Introduction To Machine Learning/Machine Learning.ipynb
+++ b/5. Introduction To Machine Learning/Machine Learning.ipynb
@@ -250,7 +250,8 @@
    "source": [
     "###  Supervised Learning is of two types\n",
     "\n",
-    "$1. Regression $ \\\n",
+    "$1. Regression $ \n",
+    "\n",
     "$2. Classification $"
    ]
   },
