Gradient Descent Approach

--- a/7.Linear Regression/2. Gradient Descent Approach.ipynb
+++ b/7.Linear Regression/2. Gradient Descent Approach.ipynb
@@ -188,9 +188,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e14b0eb",
+   "metadata": {},
+   "source": [
+    "The equation for of calculating error in simple linear regression is "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd77b22",
+   "metadata": {},
+   "source": [
+    "## $e = \\frac {\\sum_\\limits{i=1}^{n}(y-y')^2}{n} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7f18206",
+   "metadata": {},
+   "source": [
+    "    Mean Squared Error - > Gives the average deviation from line to points\n",
+    "    y  -> Orginal Value\n",
+    "    y' -> Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d88e183",
+   "metadata": {},
+   "source": [
+    "###  y'=mx+c, So"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0781ab1",
+   "metadata": {},
+   "source": [
+    "## $e = \\frac {\\sum_\\limits{i=1}^{n}(y-(mx+c))^2}{n} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bbd56a0",
+   "metadata": {},
+   "source": [
+    "### Ie,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d4016b8",
+   "metadata": {},
+   "source": [
+    "##  $\\frac{d_e}{d_m} = d\\frac {\\sum_\\limits{i=1}^{n}(y-(mx+c))^2}{n} \\Big/ {d_m}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523b6415",
+   "metadata": {},
+   "source": [
+    "    FINAL RESULT WILL BE LIKE THIS(AFTER SOME DERIVATION)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f348df8",
+   "metadata": {},
+   "source": [
+    "## $ d_m = \\frac{1}{n} \\sum_\\limits{i=0}^{n}2(y_i-(mx_i+c))(-x_i)$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4045848b",
+   "metadata": {},
+   "source": [
+    "## $d_m=\\frac{-2}{n}\\sum_\\limits{i=0}^{n}x_i(y-(mx+c))$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bef99362",
+   "metadata": {},
+   "source": [
+    "## $\\frac{d_e}{d_m}=\\frac{-2}{n}\\sum_\\limits{i=0}^{n}x_i(y-y')$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42af3a7",
+   "metadata": {},
+   "source": [
+    "## How do we get the value of $\\frac {d_e}{d_c}$ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44584758",
+   "metadata": {},
+   "source": [
+    "##  $\\frac{d_e}{d_c} = d\\frac {\\sum_\\limits{i=1}^{n}(y-(mx+c))^2}{n} \\Big/ {d_c}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "543a1665",
+   "metadata": {},
+   "source": [
+    "## $\\frac{d_e}{d_c}=\\frac{-2}{n}\\sum_\\limits{i=0}^{n}(y-y')$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdbbbbe8",
+   "metadata": {},
+   "source": [
+    "# The Formula for updating m and c was,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89727ed7",
+   "metadata": {},
+   "source": [
+    "# $m = m - \\frac{de}{dm} \\ $  ,   $c = c - \\frac{de}{dc}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa094593",
+   "metadata": {},
+   "source": [
+    "    We are multiplying Lr(Learning rate into it), so now the equation become,\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54df6fe1",
+   "metadata": {},
+   "source": [
+    "# $m = m - \\frac{de}{dm}*Lr  \\\\  c = c - \\frac{de}{dc}*Lr$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f86b295a",
+   "metadata": {},
+   "source": [
+    "    What is learning rate ?\n",
+    "    What is the value of learning rate ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e257c1be",
+   "metadata": {},
+   "source": [
+    "Lets assume that we are given a task to learn addition, How much time do you need to learn addition ? \n",
+    "\n",
+    "May be one hour, one day etc..\n",
+    "\n",
+    "Let's take 4-5 hour's\n",
+    "\n",
+    "Now How much time for LCM ,\n",
+    "\n",
+    "May be 15 hrs\n",
+    "\n",
+    "Why both the task have different time, LCM is much more complex task than addition, So it takes much time to learn LCM Than addition\n",
+    "\n",
+    "In the same way our model also , to learn a particular data (Some have simple pattern ,some data have complex pattern) depending upon the data pattern the learning time for the model will be different"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e946166",
+   "metadata": {},
+   "source": [
+    "### Learning rate(Lr) controls the speed of learning process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "762452eb",
+   "metadata": {},
+   "source": [
+    "    Why we need This ?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dedfe31e",
+   "id": "bc0a1e17",
    "metadata": {},
    "outputs": [],
    "source": []
